--- a/reports/templates/reports/add-report-details.html
+++ b/reports/templates/reports/add-report-details.html
@@ -20,10 +20,10 @@
         {% endfor %}
         <div class="form-group row">
             <div class="col">
-                <button type="submit" class="btn" id="add-details-button">Add details to your report</button>
+                <button type="submit" class="btn  btn-info" id="add-details-button">Add details to your report</button>
             </div>
-            <div>
-                <a href="{% url 'home' %}" class="col btn">Back Home</a>
+            <div class="pl">
+                <a href="{% url 'home' %}" class="btn btn-info">Back Home</a>
             </div>
         </div>
     </form>
