--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
               <a class="nav-link" href="{% url 'stories' %}">Testimonies</a>
               <a class="nav-link" href="{% url 'advice' %}">Advice</a>
               <a class="nav-link" href="{% url 'news' %}">News</a>
-              <a class="nav-link">contact</a>
+              <a class="nav-link" href="{% url 'create-report' %}">contact</a>
 
             </div>
           </div>
