--- a/advice/templates/advice/advice.html
+++ b/advice/templates/advice/advice.html
@@ -48,7 +48,7 @@
       </p>
       <br />
       <h4>
-        <a href="#" class="btn btn-lg btn-edit">Report suspicious activity</a>
+        <a href="{% url 'create-full-report' %}" class="btn btn-lg btn-edit">Report suspicious activity</a>
       </h4>
     </div>
   </div>
