--- a/reports/templates/reports/add-report-details.html
+++ b/reports/templates/reports/add-report-details.html
@@ -18,11 +18,11 @@
             </div>
         </div>
         {% endfor %}
-        <div class="form-group row">
-            <div class="col">
-                <button type="submit" class="btn  btn-info" id="add-details-button">Add details to your report</button>
+        <div class="form-group row text-center">
+            <div class="col-6">
+                <button type="submit" class="btn btn-success">Add details to your report</button>
             </div>
-            <div class="pl">
+            <div class="col-6">
                 <a href="{% url 'home' %}" class="btn btn-info">Back Home</a>
             </div>
         </div>
