--- a/templates/base.html
+++ b/templates/base.html
@@ -43,9 +43,9 @@
             <div class="navbar-nav">
               <a class="nav-link active" href="/">Home</a>
               <a class="nav-link" href="{% url 'stories' %}">Testimonies</a>
-              <a class="nav-link" href="{% url 'advice' %}">Advice</a>
+              <a class="nav-link" href="{% url 'advice' %}">Signs of Exploitation</a>
               <a class="nav-link" href="{% url 'news' %}">News</a>
-              <a class="nav-link" href="{% url 'create-report' %}">contact</a>
+              <a class="nav-link" href="{% url 'create-full-report' %}">Report Activity</a>
 
             </div>
           </div>
