--- a/reports/templates/reports/workers/worker-login.html
+++ b/reports/templates/reports/workers/worker-login.html
@@ -1,22 +1,38 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% block content %}
 
-{% block content %}
-
-    <h2>Worker Login</h2>
-
-    <form method="post" action="{% url 'worker-login' %}">
-        {% csrf_token %}
-        <div>
+<div class="text-center pt-5 pb-3">
+  <h2>Worker Login</h2>
+</div>
+<div class="page-wrapper">
+  <div class="container">
+    <div class="row">
+      <div class="col text-center">
+        <form
+          method="post"
+          action="{% url 'worker-login' %}"
+          class="form full-form login-form"
+        >
+          {% csrf_token %}
+          <div class="form-group row">
             <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
-        </div>
-        <div>
+            <input type="text" id="username" name="username" required />
+          </div>
+          <div class="form-group row">
             <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
-        </div>
-        <div>
-            <button type="submit">Login</button>
-        </div>
-    </form>
+            <input type="password" id="password" name="password" required />
+          </div>
+          <div class="form-group row text-center">
+            <div class="col-6">
+              <button type="submit" class="btn btn-info">Login</button>
+            </div>
+            <div class="col-6">
+              <a href="{% url 'home' %}" class="btn btn-info">Back Home</a>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
 
-{% endblock %}
+  {% endblock %}
