--- a/templates/base.html
+++ b/templates/base.html
@@ -45,8 +45,8 @@
               <a class="nav-link" href="{% url 'stories' %}">Testimonies</a>
               <a class="nav-link" href="{% url 'advice' %}">Signs of Exploitation</a>
               <a class="nav-link" href="{% url 'news' %}">News</a>
-              <a class="nav-link" href="{% url 'create-full-report' %}">Report Activity</a>
-
+              <a class="nav-link" href="{% url 'create-full-report' %}">Report an Activity</a>
+              <a class="nav-link staff-nav" href="{% url 'worker-login' %}">Staff</a>
             </div>
           </div>
         </div>
