--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -28,35 +28,35 @@
 <div id="testimonies">
   <div class="grey-bg">
   <div class="header-container3">
-    <h2 id="carousel-stories-heading">Survivor stories</h2>
+    <h2 id="carousel-stories-heading" class="text-white">Survivor stories</h2>
     <div id="story-carousel" class="carousel slide">
         <div class="carousel-inner">
             {% for story in homepage_stories %}
                 <div class="carousel-item {% if forloop.first %}active{% endif %}">
-                    <div class="carousel-story-container white-bg carousel-style">
+                    <div class="carousel-story-container carousel-style">
                         <h5>{{ story.title }}</h5>
                         <hr>
-                        <p>{{ story.content }}</p>
+                        <p class="text-white">{{ story.content }}</p>
                     </div>
                 </div>
             {% endfor %}
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#story-carousel" data-bs-slide="prev">
+        <button class="carousel-control-prev " type="button" data-bs-target="#story-carousel" data-bs-slide="prev">
             <span aria-hidden="true">
-                <img class="carousel-arrows" src="{% static 'img/left-arrow-story-carousel.svg' %}" alt="Previous">
+                <img class="carousel-arrows " src="{% static 'img/left-arrow-story-carousel.svg' %}" alt="Previous">
             </span>
             <span class="visually-hidden">Previous</span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#story-carousel" data-bs-slide="next">
             <span aria-hidden="true">
-                <img class="carousel-arrows" src="{% static 'img/right-arrow-story-carousel.svg' %}" alt="Next">
+                <img class="carousel-arrows " src="{% static 'img/right-arrow-story-carousel.svg' %}" alt="Next">
             </span>
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-    <hr class="carousel-seperator">
+    <hr class="carousel-seperator munsell">
     <div class="text-center">
-      <a href="{% url 'stories' %}" class="btn btn-lg btn-info mt-3 mb-3">Click here to see more survivor stories</a>
+      <a href="{% url 'stories' %}" class="btn btn-lg  btn-info mt-3 mb-3">Click here to see more survivor stories</a>
     </div>
   </div>
 </div>
@@ -125,22 +125,42 @@
       </div>
  -->
 
-<div id="advice" class="grey-bg">
-  <div class="header-container3 pb-5 pt-5">
-    <a href="{% url 'advice' %}" class="links">
-    <div class="reason white-bg">
-    <h3 class="text-center">Recognizing Signs</h3>
-    <br>
-    <p>Human trafficking and modern slavery are global issues affecting millions. Recognizing potential victims is crucial. Key signs include restricted movement, physical abuse, lack of personal documents, fearful behavior, excessive work hours, and poor living conditions. If you suspect someone is being trafficked or enslaved, it's important to act. Click here to get the full guide on how to recognize if you or someone you know needs help.</p>
-    <br>
-    <div class="btn-placement">
-    <p class="btn btn-lg btn-info mb-3">Click to learn more</p>
-  </div>
-    </a>
+<div id="advice">
+  <div class="header-container3 row pb-5 pt-5">
+    <div class="reason col-lg-6 col-md">
+      <h3 class="text-center">Recognizing Signs</h3>
+      <br>
+      <p>Human trafficking and modern slavery are global issues affecting millions. Recognizing potential victims is crucial. Key signs include restricted movement, physical abuse, lack of personal documents, fearful behavior, excessive work hours, and poor living conditions. If you suspect someone is being trafficked or enslaved, it's important to act. Click here to get the full guide on how to recognize if you or someone you know needs help.</p>
+      <br>
+      <div class="btn-placement">
+      <a href="{% url 'advice' %}" class="btn btn-lg btn-info mb-3">Click to learn more</a>
+     </div>
+    </div>
+    <div class="col-lg-6 col-md justify-content-center align-items-center text-center">
+      <img src="{% static '/img/home_1.jpg'%}" alt="Human trafficking happens everywhere" class="image-control"
+    />
     </div>
   </div>
 </div>
 
+ <!-- Latest News Section -->
+ <div class="row mt-5 bg-munsell">
+  <h2 class="text-center">Latest News</h2>
+  {% for news in latest_news %}
+  <div class="col-md-4 mb-3">
+      <div class="card h-100">
+          <img src="{{ news.image_url }}" class="card-img-top" alt="{{ news.title }}">
+          <div class="card-body">
+              <h5 class="card-title">{{ news.title }}</h5>
+              <p class="card-text">{{ news.description|truncatechars:100 }}</p>
+          </div>
+          <div class="card-footer text-end">
+              <a href="{{ news.url }}" class="btn btn-primary" target="_blank">Read More</a>
+          </div>
+      </div>
+  </div>
+  {% endfor %}
+</div>
 
 <div class="header-container4" id="assessment"></div>
 {% endblock %}
