--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,12 +1,14 @@
-
-
 /*main tags rules*/
-html, body {
+html,
+body {
     width: 100%;
-    overflow-x:hidden;
+    overflow-x: hidden;
 }
 
-h1, h2, h3, p {
+h1,
+h2,
+h3,
+p {
     padding: 0;
     margin: 0;
 }
@@ -15,6 +17,9 @@ h1, h2, h3, p {
 
 .bg-head {
     background-color: #F5F1E3 !important;
+    display: flex;
+    justify-content: center;
+    padding-top: 0.5em;
 }
 
 .links {
@@ -48,7 +53,7 @@ h1, h2, h3, p {
     width: auto;
 }
 
-@media (max-width:480px){
+@media (max-width:480px) {
     .image-high {
         max-height: 50vh;
         width: auto;
@@ -62,9 +67,12 @@ h1, h2, h3, p {
 
 /* Home Page */
 
-.main-title{
-    font-size: 35px;
+.main-title {
+    font-size: 1.2em;
+    padding: 1em 0;
 
+    width: fit-content;
+    display: inline-block;
 }
 
 .background {
@@ -75,49 +83,58 @@ h1, h2, h3, p {
 
 .outlined-text {
     text-shadow:
-    -1px -1px 0 #313638,
-     1px -1px 0 #313638,
-    -1px 1px 0 #313638,
-     1px 1px 0 #313638;
+        -1px -1px 0 #313638,
+        1px -1px 0 #313638,
+        -1px 1px 0 #313638,
+        1px 1px 0 #313638;
 }
 
 .hide {
     display: none;
 }
 
-.main-title::before  {
-    position: absolute;
+#nav-logo {
+    width: 3em;
+    min-height: 100%;
+    display: inline-block;
+    position: relative;
+    flex-shrink: 1;
+    margin: 0 1em;
+}
+
+#nav-logo::before {
     content: "";
-    width: 25%;
-    height: 25%;
-    left: 10%;
-    top: 0;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0)), url("../img/icon_2.png")!important;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0)), url(../img/logo.png);
+    position: absolute;
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center center;
     z-index: 1;
     opacity: 0.5;
+    width: 100%;
+    height: 100%;
+}
 
-  }
 
-  @media (max-width:768px){
-    .main-title::before  {
-        position: absolute;
-        content: "";
-        width: 20%;
-        height: 20%;
-        top: 0;
-        background-image: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0)), url("../img/icon_2.png")!important;
-        background-repeat: no-repeat;
-        background-size: contain;
-        background-position: center center;
-        z-index: 1;
-        opacity: 0.5;
+@media (min-width:768px) {
+    .main-title {
+        font-size: 1.6em;
+    }
 
-      }
+    #nav-logo {
+        width: 4em;
+    }
+}
 
-  }
+@media (min-width:1200px) {
+    .main-title {
+        font-size: 2em;
+    }
+
+    #nav-logo {
+        width: 5em;
+    }
+}
 
 /* Testeminies */
 
@@ -130,7 +147,7 @@ h1, h2, h3, p {
 
 .sign-heading {
     text-decoration: underline;
-    text-decoration-color:#126a75 ;
+    text-decoration-color: #126a75;
     text-underline-offset: 8px;
     padding-left: 10px;
 }
@@ -154,7 +171,7 @@ h1, h2, h3, p {
     font-weight: 500;
 }
 
-.testemony:hover > .text-muted {
+.testemony:hover>.text-muted {
     color: #313638 !important;
 }
 
@@ -172,24 +189,24 @@ h1, h2, h3, p {
     justify-content: flex-start;
     align-items: center;
     margin-bottom: 15px;
-  }
+}
 
-  .form-group label {
+.form-group label {
     margin-left: 10%;
     text-align: left;
-  }
+}
 
-  .form-group input,
-  .form-group select,
-  .form-group textarea {
+.form-group input,
+.form-group select,
+.form-group textarea {
     margin-left: 10%;
     width: 80%;
-  }
+}
 
-  #add-details-button {
+#add-details-button {
     float: right;
     margin-right: 15px;
-  }
+}
 
 .pl {
     margin-left: 15px;
@@ -217,33 +234,33 @@ h1, h2, h3, p {
     color: #FFFFFF;
 }
 
-.bg-onix{
-    background-color: #313638!important;
+.bg-onix {
+    background-color: #313638 !important;
 }
 
 .bg-munsell {
-    background-color: #1B9AAA!important;
+    background-color: #1B9AAA !important;
 }
 
 /*Nav bar elements*/
 
 .nav-link {
-    color: white!important;
+    color: white !important;
     position: relative;
     z-index: 10;
 }
 
 .nav-link:hover {
-    color: #1B9AAA!important;
+    color: #1B9AAA !important;
     transition: 0.5s ease-in-out all;
 }
 
-.nav-link::before{
+.nav-link::before {
     position: absolute;
     content: "";
     bottom: 0;
     left: 0;
-    border-bottom: #1B9AAA solid 1px ;
+    border-bottom: #1B9AAA solid 1px;
     width: 0%;
     text-align: center;
     transition: all 0.3s ease-in-out;
@@ -260,7 +277,7 @@ h1, h2, h3, p {
 
 }
 
-@media (max-width:990px){
+@media (max-width:990px) {
 
     .nav-link:hover::before {
         width: 15%;
@@ -297,20 +314,22 @@ h1, h2, h3, p {
 .carousel-arrows {
     width: 64px;
     max-width: 100%;
- 
+
 }
 
-.carousel-control-next, .carousel-control-prev {
-   max-width: 15%;
+.carousel-control-next,
+.carousel-control-prev {
+    max-width: 15%;
 }
 
-.carousel-control-next:not(:hover), .carousel-control-prev:not(:hover){
+.carousel-control-next:not(:hover),
+.carousel-control-prev:not(:hover) {
     opacity: 0.5;
 }
 
 #read-more-stories-link {
     text-decoration: none;
-    color:black;
+    color: black;
     margin: 1em;
     display: inline-block;
     font-weight: bold;
