--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,9 @@
   <body>
     <div>
     <div class="bg-head bg-logo-icon">
-      <h1 class="onyx pt-5 pb-3 text-center main-title bg-logo-icon">
+        
+        <div id="nav-logo"></div>
+      <h1 class="onyx text-center main-title">
         Human Trafficing and Slavery Prevention
       </h1>
     </div>
