Move staff login link to footer

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -36,6 +36,12 @@ p {
     justify-content: center;
 }
 
+/* Footer */
+
+#staff-login-link {
+    text-decoration: none;
+}
+
 /* Buttons */
 
 .btn-edit {
