--- a/templates/base.html
+++ b/templates/base.html
@@ -79,7 +79,7 @@
     {% endblock content %}
     </main>
     <!-- Footer -->
-    <footer class="footer mt-3 py-3">
+    <footer id="page-footer">
         <p class="m-0 text-center">
             {% block copyright %} Copyright 2025 Our Team {% endblock copyright %}
         </p>
