--- a/reports/templates/reports/workers/view-reports.html
+++ b/reports/templates/reports/workers/view-reports.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="card-body">
                     <p class="card-text">{{ report.message }}</p>
-                    <a href="{% url 'report-detail' report.id %}" class="btn" id="open-report-button">Open report</a>
+                    <a href="{% url 'report-detail' report.id %}" class="btn reports-btn">Open report</a>
                 </div>
             </div>
         </div>
