--- a/reports/templates/reports/workers/report-detail.html
+++ b/reports/templates/reports/workers/report-detail.html
@@ -19,67 +19,73 @@
                         <small>Resolved</small>
                     {% else %}
                         <img src="{% static 'img/pending.svg' %}" width="16" alt="not actioned icon">
-                        <small>Pending</small>
+                        <small id="pending-text">Pending</small>
                     {% endif %}
                     <!-- Uses JS to resolve/unresolve then reloads page -->
                     <button id="mark-resolved-btn" class="btn reports-btn mt-0">Mark as {% if report.actioned %}un{% endif %}resolved</button>
+                    <!-- This <p> is used by JS to display error message -->
+                    <p class="hide" id="mark-resolved-error-msg">Something went wrong</p>
                 </div>
                 <span id="detail-date">{{ report.date_created | date:'Y-m-d H:i' }}</span>
             </div>
-            <!-- This <p> is used by JS to display error message -->
-            <p class="hide" id="mark-resolved-error-msg">Something went wrong</p>
-            <div>
-                <p>{{ report.message }}</p>
-            </div>
-
-        <!-- Not all reports have report details -->
-        {% if report.details %}
-            <div>
-                <div class="margin-all">
-                    <h3>{{ report.details.name }}</h3>
-                    <p>{{ report.details.first_line_address }}</p>
-                    <p>{{ report.details.second_line_address }}</p>
-                    <p>{{ report.details.town_city }}</p>
-                    <p>{{ report.details.county }}</p>
-                    <p>{{ report.details.postcode }}</p>
-                    <p>{{ report.details.country }}</p>
-                    <p>{{ report.details.phone_number }}</p>
-                    <p>{{ report.details.person_of_trust }}</p>
-                    <p>{{ report.details.person_of_trust_phone_number }}</p>
-                    <p>{{ report.details.image_video_url }}</p>
+            <hr>
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <div>
+                            <p>{{ report.message }}</p>
+                        </div>
+            
+                    <!-- Not all reports have report details -->
+                    {% if report.details %}
+                        <div>
+                            <div class="margin-all">
+                                <h3>{{ report.details.name }}</h3>
+                                <p>{{ report.details.first_line_address }}</p>
+                                <p>{{ report.details.second_line_address }}</p>
+                                <p>{{ report.details.town_city }}</p>
+                                <p>{{ report.details.county }}</p>
+                                <p>{{ report.details.postcode }}</p>
+                                <p>{{ report.details.country }}</p>
+                                <p>{{ report.details.phone_number }}</p>
+                                <p>{{ report.details.person_of_trust }}</p>
+                                <p>{{ report.details.person_of_trust_phone_number }}</p>
+                                <p>{{ report.details.image_video_url }}</p>
+                            </div>
+                        </div>
+                    {% else %}
+                        <p class="margin-all">No further details available.</p>
+                    {% endif %}
+            
+                    <!-- WORKER RESPONSE DIV -->
+                    <div>
+                        <form method="post" action="{% url 'report-detail' report.id %}">
+                            {% csrf_token %}
+                            <div class="margin-all">
+                                <label for="Update">Update:</label>
+                                <textarea id="update-message" name="update-message" required></textarea>
+                                <button type="submit" >Submit</button>
+                            </div>
+                        </form>
+                    </div>
+            
+                    <!-- PREVIOUS ACTION MESSAGES DIV -->
+                    <div class="margin-all">
+                        {% if action_messages %}
+                        <h3>Previous messages:</h3>
+                        {% for message in action_messages %}
+                        <div>
+                            <p>{{ message.update_message }}</p>
+                            <p><small>~ Posted on {{ message.date_created | date:"H:i Y-m-d" }} by {{ message.worker_user }} </small></p>
+                        </div>
+                        {% endfor %}
+                        {% else %}
+                        <h3>No previous messages.</h3>
+                        {% endif %}
+                    </div>
+                    </div>
                 </div>
             </div>
-        {% else %}
-            <p class="margin-all">No further details available.</p>
-        {% endif %}
-
-        <!-- WORKER RESPONSE DIV -->
-        <div>
-            <form method="post" action="{% url 'report-detail' report.id %}">
-                {% csrf_token %}
-                <div class="margin-all">
-                    <label for="Update">Update:</label>
-                    <textarea id="update-message" name="update-message" required></textarea>
-                    <button type="submit" >Submit</button>
-                </div>
-            </form>
-        </div>
-
-        <!-- PREVIOUS ACTION MESSAGES DIV -->
-        <div class="margin-all">
-            {% if action_messages %}
-            <h3>Previous messages:</h3>
-            {% for message in action_messages %}
-            <div>
-                <p>{{ message.update_message }}</p>
-                <p><small>~ Posted on {{ message.date_created | date:"H:i Y-m-d" }} by {{ message.worker_user }} </small></p>
-            </div>
-            {% endfor %}
-            {% else %}
-            <h3>No previous messages.</h3>
-            {% endif %}
-        </div>
-
     </div>
 </div>
 {% endblock %}
