--- a/reports/templates/reports/workers/report-detail.html
+++ b/reports/templates/reports/workers/report-detail.html
@@ -32,57 +32,90 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <div>
+                        <div id="report-message">
                             <p>{{ report.message }}</p>
                         </div>
-            
-                    <!-- Not all reports have report details -->
-                    {% if report.details %}
-                        <div>
-                            <div class="margin-all">
-                                <h3>{{ report.details.name }}</h3>
-                                <p>{{ report.details.first_line_address }}</p>
-                                <p>{{ report.details.second_line_address }}</p>
-                                <p>{{ report.details.town_city }}</p>
-                                <p>{{ report.details.county }}</p>
-                                <p>{{ report.details.postcode }}</p>
-                                <p>{{ report.details.country }}</p>
-                                <p>{{ report.details.phone_number }}</p>
-                                <p>{{ report.details.person_of_trust }}</p>
-                                <p>{{ report.details.person_of_trust_phone_number }}</p>
-                                <p>{{ report.details.image_video_url }}</p>
+                        <br>
+                        <h4>Reporter details</h4>
+                        <hr>
+
+                        {% if report.details %}
+                            <div id="report-details">
+                                <div class="detail-item">
+                                    <p><strong>Name:</strong></p>
+                                    <p>{{ report.details.name }}</p>
+                                </div>
+                                <div class="detail-item">
+                                    <p><strong>First Line Address:</strong></p>
+                                    <p>{{ report.details.first_line_address }}</p>
+                                </div>
+                                <div class="detail-item">
+                                    <p><strong>Second Line Address:</strong></p>
+                                    <p>{{ report.details.second_line_address }}</p>
+                                </div>
+                                <div class="detail-item">
+                                    <p><strong>Town/City:</strong></p>
+                                    <p>{{ report.details.town_city }}</p>
+                                </div>
+                                <div class="detail-item">
+                                    <p><strong>County:</strong></p>
+                                    <p>{{ report.details.county }}</p>
+                                </div>
+                                <div class="detail-item">
+                                    <p><strong>Postcode:</strong></p>
+                                    <p>{{ report.details.postcode }}</p>
+                                </div>
+                                <div class="detail-item">
+                                    <p><strong>Country:</strong></p>
+                                    <p>{{ report.details.country }}</p>
+                                </div>
+                                <div class="detail-item">
+                                    <p><strong>Phone Number:</strong></p>
+                                    <p>{{ report.details.phone_number }}</p>
+                                </div>
+                                <div class="detail-item">
+                                    <p><strong>Person of Trust:</strong></p>
+                                    <p>{{ report.details.person_of_trust }}</p>
+                                </div>
+                                <div class="detail-item">
+                                    <p><strong>Person of Trust Phone Number:</strong></p>
+                                    <p>{{ report.details.person_of_trust_phone_number }}</p>
+                                </div>
+                                <div class="detail-item">
+                                    <p><strong>Image/Video URL:</strong></p>
+                                    <p>{{ report.details.image_video_url }}</p>
+                                </div>
                             </div>
-                        </div>
-                    {% else %}
-                        <p class="margin-all">No further details available.</p>
-                    {% endif %}
-            
-                    <!-- WORKER RESPONSE DIV -->
-                    <div>
-                        <form method="post" action="{% url 'report-detail' report.id %}">
-                            {% csrf_token %}
-                            <div class="margin-all">
-                                <label for="Update">Update:</label>
-                                <textarea id="update-message" name="update-message" required></textarea>
-                                <button type="submit" >Submit</button>
-                            </div>
-                        </form>
-                    </div>
-            
-                    <!-- PREVIOUS ACTION MESSAGES DIV -->
-                    <div class="margin-all">
-                        {% if action_messages %}
-                        <h3>Previous messages:</h3>
-                        {% for message in action_messages %}
-                        <div>
-                            <p>{{ message.update_message }}</p>
-                            <p><small>~ Posted on {{ message.date_created | date:"H:i Y-m-d" }} by {{ message.worker_user }} </small></p>
-                        </div>
-                        {% endfor %}
                         {% else %}
-                        <h3>No previous messages.</h3>
+                            <p class="margin-all">No further details available.</p>
                         {% endif %}
-                    </div>
+            
+                        <!-- WORKER RESPONSE DIV -->
+                        <div>
+                            <form method="post" action="{% url 'report-detail' report.id %}">
+                                {% csrf_token %}
+                                <div class="margin-all">
+                                    <label for="Update">Update:</label>
+                                    <textarea id="update-message" name="update-message" required></textarea>
+                                    <button type="submit" >Submit</button>
+                                </div>
+                            </form>
+                        </div>
+                
+                        <!-- PREVIOUS ACTION MESSAGES DIV -->
+                        <div class="margin-all">
+                            {% if action_messages %}
+                            <h3>Previous messages:</h3>
+                            {% for message in action_messages %}
+                            <div>
+                                <p>{{ message.update_message }}</p>
+                                <p><small>~ Posted on {{ message.date_created | date:"H:i Y-m-d" }} by {{ message.worker_user }} </small></p>
+                            </div>
+                            {% endfor %}
+                            {% else %}
+                            <h3>No previous messages.</h3>
+                            {% endif %}
+                        </div>
                     </div>
                 </div>
             </div>
