--- a/reports/templates/reports/workers/worker-login.html
+++ b/reports/templates/reports/workers/worker-login.html
@@ -10,7 +10,7 @@
         <form
           method="post"
           action="{% url 'worker-login' %}"
-          class="form full-form login-form"
+          class="form full-form login-form" id="worker-login-form"
         >
           {% csrf_token %}
           <div class="form-group row">
@@ -22,11 +22,8 @@
             <input type="password" id="password" name="password" required />
           </div>
           <div class="form-group row text-center">
-            <div class="col-6">
+            <div class="col-12">
               <button type="submit" class="btn btn-info">Login</button>
-            </div>
-            <div class="col-6">
-              <a href="{% url 'home' %}" class="btn btn-info">Back Home</a>
             </div>
           </div>
         </form>
