Tweak navbar item names

--- a/templates/base.html
+++ b/templates/base.html
@@ -53,10 +53,10 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link active" href="/">Home</a>
-                        <a class="nav-link" href="{% url 'stories' %}">Testimonies</a>
+                        <a class="nav-link" href="{% url 'stories' %}">Survivor Stories</a>
                         <a class="nav-link" href="{% url 'advice' %}">Signs of Exploitation</a>
                         <a class="nav-link" href="{% url 'news' %}">News</a>
-                        <a class="nav-link" href="{% url 'create-full-report' %}">Report an Activity</a>
+                        <a class="nav-link" href="{% url 'create-full-report' %}">Report Anonymously</a>
                     </div>
                 </div>
             </div>
